--- a/views/index.jade
+++ b/views/index.jade
@@ -2,38 +2,63 @@ doctype html
 html
   head
     title= 'predictive parking'
-    script(src='http://maps.googleapis.com/maps/api/js?sensor=false')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js')
     link(rel="stylesheet",type="text/css",href="/style.css",media="screen")
-    script(src='/app.js')
+    script(type='text/javascript',src='http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&language=en&v=3.17')
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 
-    script(src='/scripts/controllers/form.js')
+    script(src='/scripts/controllers/searchbox.js')
+    script(src='/scripts/controllers/app.js')
     script(src='/scripts/controllers/map.js')
 
     script(src='/bower_components/lodash/lodash.js')
     script(src='/bower_components/angular-google-maps/dist/angular-google-maps.min.js')
+    script(src='/bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
 
   body
+    nav(class="navbar navbar-default")
+      ul(class="nav nav-tabs")
+        li(role="presentation" class="active")
+          a(href="#") Home
     div(ng-app='myApp')
-      div(ng-controller="formCtrl")
-        div.address
-          |Address
-          input(type="address", ng-model="address")
-          button Submit
-        div.destination
-          |Destination
-          input(type="destination", ng-model="destination")
-          button Submit
-        div.departure
-          |Departure Time
-          input(type="departure", ng-model="departure")
-          button Submit
+      div(class="button test", ng-controller="testCtrl")
+        button(class = "btn btn-default btn-sm" ng-click="formsubmit()") Submit
+          pre {{test}}
 
-      div(ng-controller="MapController")
-        ui-gmap-google-map(center='map.center', zoom='map.zoom')
-        p test
+      div(ng-controller="mainCtrl")
+        div.form_container
+          form
+            h3 Where are you coming from?
+            div.address
+              span Address
+              input(id="autocomplete_address", placeholder="Enter your current location", ng-model="address", ng-change="changed()")
+            h3 Awesome! Where next?
+            div.destination
+              span Destination
+              input(id="autocomplete_destination", placeholder="Enter your destination", ng-model="destination", ng-change="changed()")
+            h3 Cool, when are you planning on leaving?
 
-    p driving time
+            div(ng-controller="DatepickerDemoCtrl")
+              input(type="text",class="form-control", datepicker-popup="{{format}}", ng-model="dt", is-open="opened", min-date="minDate", ng-change="changed()" max-date="'2016-12-30'", datepicker-options="dateOptions", ng-required="true", close-text="Close")
+              
+              button(class="btn btn-default",ng-click="open($event)")
+                i(class="glyphicon glyphicon-calendar")
+
+            div(class="clock",ng-controller="TimepickerDemoCtrl")
+              timepicker(ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian")
+
+            div(class="button", ng-controller="SubmitCtrl")
+              button(class = "btn btn-default btn-sm" ng-click="formsubmit()") Submit
+              pre {{result}}
+
+          div.map_container
+            p.class
+              h2 Map
+            ui-gmap-google-map(center='map.center', zoom='map.zoom')
+         
+          script(type='text/ng-template',id='searchbox.tpl.html')
+      
+
           
   
       
